Add build artifacts to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 tags
 node_modules
 __pycache__
+# Build artifacts - ignore hash-based asset files
+dinematters/public/dinematters/assets/index-*.css
+dinematters/public/dinematters/assets/index-*.js
