Add FastAPI Proxy Shield foundation
- Complete API inventory (20 APIs documented)
- ERPNext wrapper methods (4 new APIs)
- FastAPI service structure with ERPNext client
- JWT authentication system
- Configuration management
- Example route module (ui_routes)
- Comprehensive documentation
- Deployment guides

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ dinematters/public/dinematters/assets/index-*.js
 # Build artifacts - ignore hash-based asset files
 dinematters/public/dinematters/assets/index-*.css
 dinematters/public/dinematters/assets/index-*.js
+
+# FastAPI Proxy - Environment and virtual environment
+fastapi_proxy/.env
+fastapi_proxy/venv/
+fastapi_proxy/.venv/
+fastapi_proxy/__pycache__/
+fastapi_proxy/**/__pycache__/
+*.env
+venv/
+.venv/
