--- a/fastapi_proxy/requirements.txt
+++ b/fastapi_proxy/requirements.txt
@@ -24,8 +24,7 @@ hiredis==2.3.2
 pydantic==2.5.3
 pydantic-settings==2.1.0
 
-# CORS
-python-cors==1.0.0
+# CORS is built into FastAPI - no separate package needed
 
 # Logging
 python-json-logger==2.0.7
